--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.2.2
   provider: ^6.1.1
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
