--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   uuid: ^4.3.3
+  firebase_core: ^2.27.1
+  firebase_database: ^10.4.10
+  cloud_firestore: ^4.15.9
 
 dev_dependencies:
   flutter_test:
