--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
-name: cashflow
-description: "A new Flutter project."
+name: cashflowtracker
+description: "Eine interaktive App zum Verfolgen und Verwalten von Cashflow in einem spielerischen Umfeld. Ermöglicht sowohl Singleplayer- als auch Multiplayer-Modus, bei dem Benutzer ihre finanziellen Strategien testen können."
+
 publish_to: 'none'
 version: 0.1.0
 
